--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "prepublish": "npm run build",
     "compile": "npm run build && browserify lib/ -o bundle.js && echo Compile finished"
   },
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.11.4",
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
-    "babel-plugin-transform-object-rest-spread": "^6.16.0"
+    "browserify": "^13.1.1"
   }
 }
